--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: pixel-font;
-    src:url(/fonts/04b_30/04B_30__.TTF);
+    src:url(./fonts/04b_30/04B_30__.TTF);
 }
 
 body {
-    background-image: url(/img/peakpx.jpg);
+    background-image: url(./img/peakpx.jpg);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,7 +88,7 @@ button:hover {
 @media screen and (max-width: 700px) {
     body {
         display: flex;
-        background-image: url(/img/portrait-bg.jpg);
+        background-image: url(./img/portrait-bg.jpg);
         justify-content: center;
         align-items: center;
         height: auto;
