--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(./img/peakpx.jpg);
+    background-image: url(./img/b-ground.jpg);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,14 +42,14 @@ button:hover {
 }
 
 
-.btns {
+.btn {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
 }
 
 .reset-btn {
-    width: 100px;
+    width: 120px;
     height: auto;
     border-radius: 10px;
     margin: 15px;
@@ -85,7 +85,7 @@ button:hover {
     padding: 10px;
 }
 
-@media screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     body {
         display: flex;
         background-image: url(./img/portrait-bg.jpg);
@@ -103,16 +103,48 @@ button:hover {
     #para {
         margin-top: 140px;
     }
-
-    .btns {
+    
+    .btn {
         display: flex;
         flex-direction: row;
     }
-    
+
+    .reset-btn {
+        /* font-size: 15px; */
+        box-shadow: none;
+    }
+
+    .reset-btn:hover {
+        box-shadow: none;
+    }
 
     .rock,
     .paper,
     .scissors {
-    width: 40px;
+        width: 40px;
+    }
+
+    .footer {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 900px) and (orientation: landscape) {
+    body {
+        background-image: url(./img/landscape-bg.jpg);
+    }
+
+    #para {
+        margin-top: 44px;
+    }
+    
+    .title {
+        font-size: 40px;
+        margin-bottom: 40px;
+    }
+
+    .reset-btn {
+        /* font-size: 15px; */
+        box-shadow: none;
     }
 }
