--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: pixel-font2;
-    src: url(./fonts/pixel_bit/PixelBit-Free.ttf);
+    src: url(./fonts/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf);
 }
 
 body {
@@ -53,13 +53,24 @@ button:hover {
     gap: 2rem;
 }
 
+#scissors-btn {
+    animation: scissors-selection-animation 1s ease-in-out;
+}
+
+#rock-btn {
+    animation: rock-selection-animation 1s ease-in-out;
+}
+
 .reset-btn {
+    margin: 0 auto;
+    margin-top: 15px;
+    display: none;
     width: 120px;
     height: auto;
     border-radius: 10px;
-    margin: 15px;
     font-weight: 800;
     text-shadow: none;
+    animation: para-animation 2s ease-in;
 }
 
 .title {
@@ -71,16 +82,23 @@ button:hover {
 }
 
 #para {
-    margin-top: 40px;
+    margin-top: 28px;
     font-family: pixel-font;
     color: mediumseagreen;
-    font-size: 30px;
-    animation: para-animation 2s ease-in;
+    text-shadow: 0 0 15px #000;
+    font-size: 28px;
+    animation: para-animation 3s ease-in;
 }
 
 #scorePanel {
     font-family: pixel-font;
     animation: score-animation 1s ease-in;
+    margin-top: 60px;
+}
+
+#choices {
+    font-family: pixel-font;
+    word-spacing: 6em;
 }
 
 .rock,
@@ -107,15 +125,15 @@ button:hover {
   @keyframes para-animation {
     0% {
         opacity: 0;
-        transform: translateX(-30px);
+        /* transform: translateX(-30px); */
       }
       50% {
-        opacity: 0.40;
-        transform: translateX(8px);
+        opacity: 0;
+        /* transform: translateX(8px); */
       }
       100% {
         opacity: 1;
-        transform: translateX(0);
+        /* transform: translateX(0); */
       }
   }
 
@@ -132,6 +150,30 @@ button:hover {
         opacity: 1;
         transform: translateX(0);
       }
+  }
+
+  @keyframes rock-selection-animation {
+    0% {
+        transform: translateX(-300px);
+    }
+    50% {
+        transform: translateX(8px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+  }
+
+  @keyframes scissors-selection-animation {
+    0% {
+        transform: translateX(300px);
+    }
+    50% {
+        transform: translateX(-8px);
+    }
+    100% {
+        transform: translateX(0);
+    }
   }
 
 @media only screen and (max-width: 900px) {
@@ -152,6 +194,10 @@ button:hover {
     #para {
         margin-top: 85px;
     }
+
+    #scorePanel {
+        margin-top: 68px;
+    }
     
     .btn {
         display: flex;
@@ -160,20 +206,18 @@ button:hover {
 
     .reset-btn {
         box-shadow: none;
+        display: none;
     }
 
     .reset-btn:hover {
         box-shadow: none;
+
     }
     
     .rock,
     .paper,
     .scissors {
         width: 40px;
-    }
-
-    .footer {
-        display: none;
     }
 }
 
@@ -186,6 +230,10 @@ button:hover {
         margin-top: 30px;
         font-size: 20px;
     }
+
+    #scorePanel {
+        margin-top: 25px;
+    }
     
     .title {
         font-size: 40px;
@@ -194,6 +242,7 @@ button:hover {
 
     .reset-btn {
         box-shadow: none;
+        display: none;
     }
 
     .reset-btn:hover {
