--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button:hover {
     height: auto;
     border-radius: 10px;
     font-weight: 800;
+    font-family: pixel-font2;
     text-shadow: none;
     animation: para-animation 2s ease-in;
 }
